--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,79 +2,109 @@ name: CI - Tests & Quality Checks
 
 on:
   push:
-    branches: [ master, main, development, feature/*, fix/* ]
+    branches: [development, master, main]
   pull_request:
-    branches: [ master, main, development ]
+    branches: [development, master, main]
   workflow_dispatch:
 
 permissions:
   contents: read
-  checks: write
   pull-requests: write
+  issues: write
 
 jobs:
+  # First job: Check if we need to run tests based on changed files
+  check-relevance:
+    name: Check Release Relevance
+    runs-on: ubuntu-latest
+    outputs:
+      should-test: ${{ steps.check.outputs.should-release }}
+      reason: ${{ steps.check.outputs.reason }}
+      version-type: ${{ steps.check.outputs.version-type }}
+      next-version: ${{ steps.check.outputs.next-version }}
+    
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Check release relevance
+        id: check
+        uses: ./.github/actions/check-release-relevance
+        with:
+          base-ref: ${{ github.event_name == 'pull_request' && github.event.pull_request.base.sha || 'origin/master' }}
+          head-ref: ${{ github.event_name == 'pull_request' && github.event.pull_request.head.sha || github.sha }}
+
+      - name: Comment on PR with analysis
+        if: github.event_name == 'pull_request'
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const shouldTest = '${{ steps.check.outputs.should-release }}' === 'true';
+            const reason = '${{ steps.check.outputs.reason }}';
+            const versionType = '${{ steps.check.outputs.version-type }}';
+            const nextVersion = '${{ steps.check.outputs.next-version }}';
+            
+            let body = `## 🔍 CI Analysis\n\n`;
+            
+            if (shouldTest) {
+              body += `### ✅ Tests Required\n\n`;
+              body += `**Reason:** ${reason}\n`;
+              if (nextVersion) {
+                body += `**Impact:** ${versionType} release → version \`${nextVersion}\`\n`;
+              }
+              body += `\n### 🚀 What will happen:\n`;
+              body += `1. Full test suite will run\n`;
+              body += `2. Code quality checks will execute\n`;
+              body += `3. Build verification will be performed\n`;
+              if (nextVersion) {
+                body += `4. If merged to master → Auto-release to \`${nextVersion}\`\n`;
+              }
+            } else {
+              body += `### ⏭️ Tests Skipped\n\n`;
+              body += `**Reason:** ${reason}\n\n`;
+              body += `Only documentation or CI configuration files were changed.\n`;
+              body += `No tests or quality checks needed.`;
+            }
+            
+            // Find existing comment and update or create new one
+            const comments = await github.rest.issues.listComments({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              issue_number: context.issue.number,
+            });
+            
+            const existingComment = comments.data.find(comment => 
+              comment.user.type === 'Bot' && comment.body.includes('🔍 CI Analysis')
+            );
+            
+            if (existingComment) {
+              await github.rest.issues.updateComment({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                comment_id: existingComment.id,
+                body: body
+              });
+            } else {
+              await github.rest.issues.createComment({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                issue_number: context.issue.number,
+                body: body
+              });
+            }
+
+  # Only run tests if changes are relevant
   test:
-    name: Unit & Integration Tests
+    name: Maven Tests (Java 17)
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        java-version: [17, 21]
+    needs: check-relevance
+    if: needs.check-relevance.outputs.should-test == 'true'
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-
-      - name: Set up JDK ${{ matrix.java-version }}
-        uses: actions/setup-java@v4
-        with:
-          java-version: ${{ matrix.java-version }}
-          distribution: 'temurin'
-
-      - name: Cache Maven dependencies
-        uses: actions/cache@v4
-        with:
-          path: ~/.m2
-          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-          restore-keys: ${{ runner.os }}-m2
-
-      - name: Run unit tests
-        run: |
-          echo "Running unit tests..."
-          mvn test -Dtest="**/unit/**"
-
-      - name: Run integration tests
-        run: |
-          echo "Running integration tests..."
-          mvn test -Dtest="**/integration/**"
-
-      - name: Generate test report
-        if: always()
-        uses: dorny/test-reporter@v1
-        with:
-          name: Maven Tests (Java ${{ matrix.java-version }})
-          path: target/surefire-reports/*.xml
-          reporter: java-junit
-
-      - name: Upload test results
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: test-results-java${{ matrix.java-version }}
-          path: |
-            target/surefire-reports/
-            target/failsafe-reports/
-
-  code-quality:
-    name: Code Quality & Security
-    runs-on: ubuntu-latest
-    needs: test
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0  # Full history for SonarQube
 
       - name: Set up JDK 17
         uses: actions/setup-java@v4
@@ -89,58 +119,61 @@ jobs:
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
 
-      - name: Compile project
-        run: mvn clean compile
+      - name: Run tests
+        run: mvn clean test
 
-      - name: Run SpotBugs analysis
-        run: |
-          echo "Running SpotBugs static analysis..."
-          mvn -Pquality spotbugs:check
+      - name: Generate test report
+        uses: dorny/test-reporter@v1
+        if: always()
+        with:
+          name: Maven Tests
+          path: target/surefire-reports/*.xml
+          reporter: java-junit
+          fail-on-error: true
 
-      - name: Run PMD analysis
-        run: |
-          echo "Running PMD code analysis..."
-          mvn -Pquality pmd:check
-
-      - name: Run Checkstyle
-        run: |
-          echo "Running Checkstyle..."
-          mvn -Pquality checkstyle:check
-
-      - name: Generate code coverage report
-        run: |
-          echo "Generating code coverage report..."
-          mvn test jacoco:report
-
-      - name: SonarQube Scan (if configured)
-        if: env.SONAR_TOKEN != ''
-        run: |
-          echo "Running SonarQube analysis..."
-          mvn sonar:sonar \
-            -Dsonar.projectKey=${{ github.repository_owner }}_logging-library \
-            -Dsonar.organization=${{ github.repository_owner }} \
-            -Dsonar.host.url=https://sonarcloud.io \
-            -Dsonar.login=${{ secrets.SONAR_TOKEN }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-
-      - name: Upload SpotBugs results
+      - name: Upload test results
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: spotbugs-report
-          path: target/spotbugsXml.xml
+          name: test-results
+          path: |
+            target/surefire-reports/
+            target/site/jacoco/
 
-      - name: Upload PMD results
-        if: always()
-        uses: actions/upload-artifact@v4
+  # Only run quality checks if changes are relevant
+  code-quality:
+    name: Code Quality & Security
+    runs-on: ubuntu-latest
+    needs: [check-relevance, test]
+    if: needs.check-relevance.outputs.should-test == 'true' && (success() || failure())
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
         with:
-          name: pmd-report
-          path: target/pmd.xml
+          java-version: '17'
+          distribution: 'temurin'
+
+      - name: Cache Maven dependencies
+        uses: actions/cache@v4
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-m2
+
+      - name: Run quality checks
+        run: |
+          echo "Running code quality analysis..."
+          mvn clean compile -Pquality
+          mvn -Pquality spotbugs:check pmd:check checkstyle:check
+
+      - name: Generate coverage report
+        run: mvn jacoco:report
 
       - name: Upload coverage reports
-        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: coverage-reports
@@ -148,57 +181,12 @@ jobs:
             target/site/jacoco/
             target/jacoco.exec
 
-  security-scan:
-    name: Security Vulnerability Scan
-    runs-on: ubuntu-latest
-    needs: test
-    # Only run security scans on main branches or when explicitly triggered
-    if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main' || github.event_name == 'workflow_dispatch'
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
-        with:
-          java-version: '17'
-          distribution: 'temurin'
-
-      - name: Cache Maven dependencies
-        uses: actions/cache@v4
-        with:
-          path: ~/.m2
-          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-          restore-keys: ${{ runner.os}}-m2
-
-      - name: Run OWASP Dependency Check
-        run: |
-          echo "Running OWASP dependency vulnerability scan..."
-          mvn org.owasp:dependency-check-maven:check -DfailOnError=false
-        continue-on-error: true
-
-      - name: Upload OWASP report
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: owasp-dependency-check-report
-          path: target/dependency-check-report.html
-
-      - name: Run Snyk security scan (if configured)
-        if: env.SNYK_TOKEN != ''
-        uses: snyk/actions/maven@master
-        continue-on-error: true
-        env:
-          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-        with:
-          args: --severity-threshold=high
-
+  # Only run build verification if tests passed
   build-verification:
     name: Build Verification
     runs-on: ubuntu-latest
-    needs: [test, code-quality]
-    if: always() && (needs.test.result == 'success' && needs.code-quality.result == 'success')
+    needs: [check-relevance, test, code-quality]
+    if: needs.check-relevance.outputs.should-test == 'true' && needs.test.result == 'success' && needs.code-quality.result == 'success'
 
     steps:
       - name: Checkout code
@@ -217,20 +205,10 @@ jobs:
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
 
-      - name: Build project
+      - name: Build and package
         run: |
-          echo "Building project with all profiles..."
           mvn clean package -DskipTests
-
-      - name: Generate documentation
-        run: |
-          echo "Generating Javadoc..."
           mvn javadoc:javadoc
-
-      - name: Generate sources JAR
-        run: |
-          echo "Generating sources JAR..."
-          mvn source:jar
 
       - name: Verify artifacts
         run: |
@@ -257,10 +235,12 @@ jobs:
             target/site/apidocs/
           retention-days: 7
 
+  # Dependency review only for PRs
   dependency-review:
     name: Dependency Review
     runs-on: ubuntu-latest
-    if: github.event_name == 'pull_request'
+    needs: check-relevance
+    if: github.event_name == 'pull_request' && needs.check-relevance.outputs.should-test == 'true'
 
     steps:
       - name: Checkout code
@@ -271,10 +251,12 @@ jobs:
         with:
           fail-on-severity: moderate
 
+  # Performance tests only when needed and not on every commit
   performance-test:
     name: Performance Tests
     runs-on: ubuntu-latest
-    if: github.event_name == 'push' && (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main')
+    needs: [check-relevance, test]
+    if: needs.check-relevance.outputs.should-test == 'true' && (github.event_name == 'workflow_dispatch' || github.ref == 'refs/heads/master')
 
     steps:
       - name: Checkout code
@@ -295,21 +277,20 @@ jobs:
 
       - name: Run performance tests
         run: |
-          echo "Running performance benchmarks..."
-          # Add JMH or other performance testing framework here
-          mvn test -Dtest="**/performance/**" -DfailIfNoTests=false
+          echo "Running performance tests..."
+          mvn test -Dtest=**/*PerformanceTest
 
       - name: Upload performance results
-        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: performance-results
           path: target/performance-reports/
 
+  # Summary job that runs always
   summary:
     name: CI Summary
     runs-on: ubuntu-latest
-    needs: [test, code-quality, security-scan, build-verification]
+    needs: [check-relevance, test, code-quality, build-verification]
     if: always()
 
     steps:
@@ -317,34 +298,37 @@ jobs:
         run: |
           echo "## 🔍 CI Pipeline Summary" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          echo "### Test Results" >> $GITHUB_STEP_SUMMARY
-          echo "- **Unit & Integration Tests:** ${{ needs.test.result }}" >> $GITHUB_STEP_SUMMARY
-          echo "- **Code Quality Checks:** ${{ needs.code-quality.result }}" >> $GITHUB_STEP_SUMMARY
           
-          # Only show security scan results if it ran
-          if [[ "${{ needs.security-scan.result }}" != "skipped" ]]; then
-            echo "- **Security Scan:** ${{ needs.security-scan.result }}" >> $GITHUB_STEP_SUMMARY
-          else
-            echo "- **Security Scan:** ⏭️ Skipped (only runs on main branches)" >> $GITHUB_STEP_SUMMARY
-          fi
+          SHOULD_TEST="${{ needs.check-relevance.outputs.should-test }}"
+          REASON="${{ needs.check-relevance.outputs.reason }}"
           
-          echo "- **Build Verification:** ${{ needs.build-verification.result }}" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
+          if [ "$SHOULD_TEST" = "true" ]; then
+            echo "### ✅ Full CI Pipeline Executed" >> $GITHUB_STEP_SUMMARY
+            echo "**Reason:** $REASON" >> $GITHUB_STEP_SUMMARY
+            echo "" >> $GITHUB_STEP_SUMMARY
+            echo "### Test Results" >> $GITHUB_STEP_SUMMARY
+            echo "- **Unit & Integration Tests:** ${{ needs.test.result }}" >> $GITHUB_STEP_SUMMARY
+            echo "- **Code Quality Checks:** ${{ needs.code-quality.result }}" >> $GITHUB_STEP_SUMMARY
+            echo "- **Build Verification:** ${{ needs.build-verification.result }}" >> $GITHUB_STEP_SUMMARY
+            echo "" >> $GITHUB_STEP_SUMMARY
 
-          # Check if core checks passed (security scan is optional)
-          if [[ "${{ needs.test.result }}" == "success" && "${{ needs.code-quality.result }}" == "success" && "${{ needs.build-verification.result }}" == "success" ]]; then
-            echo "### ✅ All Essential Checks Passed!" >> $GITHUB_STEP_SUMMARY
-            echo "The logging library is ready for release." >> $GITHUB_STEP_SUMMARY
+            # Check if all checks passed
+            if [[ "${{ needs.test.result }}" == "success" && "${{ needs.code-quality.result }}" == "success" && "${{ needs.build-verification.result }}" == "success" ]]; then
+              echo "### ✅ All Checks Passed!" >> $GITHUB_STEP_SUMMARY
+              echo "The logging library is ready for release." >> $GITHUB_STEP_SUMMARY
+              
+              NEXT_VERSION="${{ needs.check-relevance.outputs.next-version }}"
+              if [ -n "$NEXT_VERSION" ]; then
+                echo "" >> $GITHUB_STEP_SUMMARY
+                echo "**Next Release:** \`$NEXT_VERSION\` (when merged to master)" >> $GITHUB_STEP_SUMMARY
+              fi
+            else
+              echo "### ❌ Some Checks Failed" >> $GITHUB_STEP_SUMMARY
+              echo "Please review the failed jobs above." >> $GITHUB_STEP_SUMMARY
+            fi
           else
-            echo "### ❌ Some Essential Checks Failed" >> $GITHUB_STEP_SUMMARY
-            echo "Please review the failed jobs above." >> $GITHUB_STEP_SUMMARY
+            echo "### ⏭️ CI Pipeline Skipped" >> $GITHUB_STEP_SUMMARY
+            echo "**Reason:** $REASON" >> $GITHUB_STEP_SUMMARY
+            echo "" >> $GITHUB_STEP_SUMMARY
+            echo "No tests needed - only documentation or CI configuration changes detected." >> $GITHUB_STEP_SUMMARY
           fi
-
-          echo "" >> $GITHUB_STEP_SUMMARY
-          echo "### 📊 Available Reports" >> $GITHUB_STEP_SUMMARY
-          echo "- Test results and coverage reports" >> $GITHUB_STEP_SUMMARY
-          echo "- Static analysis reports (SpotBugs, PMD, Checkstyle)" >> $GITHUB_STEP_SUMMARY
-          if [[ "${{ needs.security-scan.result }}" != "skipped" ]]; then
-            echo "- Security vulnerability reports" >> $GITHUB_STEP_SUMMARY
-          fi
-          echo "- Build artifacts and documentation" >> $GITHUB_STEP_SUMMARY
