--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,9 @@ jobs:
       reason: ${{ steps.check.outputs.reason }}
       version-type: ${{ steps.check.outputs.version-type }}
       next-version: ${{ steps.check.outputs.next-version }}
+      current-version: ${{ steps.version_check.outputs.current_version }}
+      version-exists: ${{ steps.version_check.outputs.version_exists }}
+      latest-snapshot: ${{ steps.version_check.outputs.latest_snapshot }}
     
     steps:
       - name: Checkout code
@@ -28,12 +31,50 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Setup Java
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+
       - name: Check release relevance
         id: check
         uses: ./.github/actions/check-release-relevance
         with:
           base-ref: ${{ github.event.pull_request.base.sha }}
           head-ref: ${{ github.event.pull_request.head.sha }}
+
+      - name: Get current version and check if exists
+        id: version_check
+        if: steps.check.outputs.should-release == 'true'
+        run: |
+          # Get current version from pom.xml
+          CURRENT_VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
+          echo "current_version=$CURRENT_VERSION" >> $GITHUB_OUTPUT
+          echo "Current version in pom.xml: $CURRENT_VERSION"
+
+          # Check if this version already exists as a release
+          echo "🔍 Checking for existing SNAPSHOT releases for version $CURRENT_VERSION..."
+
+          # Get list of existing snapshot releases for this version
+          EXISTING_SNAPSHOTS=$(gh release list --limit 50 --json tagName,isPrerelease | jq -r '.[] | select(.isPrerelease == true and (.tagName | contains("snapshot-'$CURRENT_VERSION'-"))) | .tagName' | head -5)
+
+          if [ -n "$EXISTING_SNAPSHOTS" ]; then
+            echo "version_exists=true" >> $GITHUB_OUTPUT
+            echo "📦 Found existing SNAPSHOT releases for version $CURRENT_VERSION:"
+            echo "$EXISTING_SNAPSHOTS"
+
+            # Get the latest (first) snapshot for this version
+            LATEST_SNAPSHOT=$(echo "$EXISTING_SNAPSHOTS" | head -1)
+            echo "latest_snapshot=$LATEST_SNAPSHOT" >> $GITHUB_OUTPUT
+            echo "📦 Latest snapshot: $LATEST_SNAPSHOT"
+          else
+            echo "version_exists=false" >> $GITHUB_OUTPUT
+            echo "📦 No existing SNAPSHOT releases found for version $CURRENT_VERSION"
+            echo "latest_snapshot=" >> $GITHUB_OUTPUT
+          fi
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Comment PR with impact analysis
         uses: actions/github-script@v7
@@ -43,18 +84,29 @@ jobs:
             const reason = '${{ steps.check.outputs.reason }}';
             const versionType = '${{ steps.check.outputs.version-type }}';
             const nextVersion = '${{ steps.check.outputs.next-version }}';
+            const currentVersion = '${{ steps.version_check.outputs.current_version }}';
+            const versionExists = '${{ steps.version_check.outputs.version_exists }}' === 'true';
+            const latestSnapshot = '${{ steps.version_check.outputs.latest_snapshot }}';
             const targetBranch = '${{ github.event.pull_request.base.ref }}';
-            
+
             let body = `## 🔍 Pull Request Impact Analysis\n\n`;
-            
+
             if (shouldValidate) {
               body += `### ✅ Full Validation Required\n\n`;
               body += `**Reason:** ${reason}\n`;
               body += `**Target Branch:** \`${targetBranch}\`\n`;
-              
-              if (nextVersion && targetBranch === 'development') {
-                body += `**Impact:** Will create SNAPSHOT \`${nextVersion}-SNAPSHOT\`\n`;
-              } else if (nextVersion && (targetBranch === 'master' || targetBranch === 'main')) {
+
+              if (targetBranch === 'development') {
+                body += `**Current Version:** \`${currentVersion}\`\n`;
+                if (versionExists) {
+                  body += `**Impact:** Will replace existing SNAPSHOT \`${currentVersion}\`\n`;
+                  if (latestSnapshot) {
+                    body += `**Previous:** \`${latestSnapshot}\` will be replaced\n`;
+                  }
+                } else {
+                  body += `**Impact:** Will create new SNAPSHOT \`${currentVersion}\`\n`;
+                }
+              } else if (targetBranch === 'master' || targetBranch === 'main') {
                 body += `**Impact:** Will create ${versionType} release \`${nextVersion}\`\n`;
               }
               
